WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200011
WebKit SPI fix for [ClickyOrb] Audio continues playing after dismissing a video preview in Safari
https://bugs.webkit.org/show_bug.cgi?id=200011
Summary
WebKit SPI fix for [ClickyOrb] Audio continues playing after dismissing a vid...
Dean Jackson
Reported
2019-07-22 13:17:02 PDT
WebKit SPI fix for [ClickyOrb] Audio continues playing after dismissing a video preview in Safari
Attachments
Patch
(2.82 KB, patch)
2019-07-22 13:21 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-07-22 13:18:11 PDT
<
rdar://problem/53409457
>
Dean Jackson
Comment 2
2019-07-22 13:21:39 PDT
Created
attachment 374623
[details]
Patch
Dean Jackson
Comment 3
2019-07-22 13:39:05 PDT
Committed
r247700
: <
https://trac.webkit.org/changeset/247700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug